# Disk-Image

./: .gitignore  10x_narbulut.10x_workspace  Disk Image.sln  build.bat  changelog  debugger.bat  diskimage.rdbg  project.4coder  reset.bat  start.bat  tempfile.cpp  wrapper_build.bat
AESLicenseKeyPoC/: AESLicenseKeyPoC.csproj  App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs
DisckBackup.Entities/: ActivityLog.cs  BackupAreaInfo.cs  BackupDataInfo.cs  BackupTask.cs  DisckBackup.Entities.csproj  DiskBackup.Entities.csproj  DiskInfo.cs  FileInfo.cs  Log.cs  RestoreTask.cs  TaskInfo.cs  VolumeInfo.cs
Disk Image/: Benchmark.csv  Disk Image.vcxproj  Disk Image.vcxproj.filters
DiskBackup.Business/: DiskBackup.Business.csproj
DiskBackup.Business.Tests/: DiskBackup.Business.Tests.csproj  UnitTest1.cs
DiskBackup.Communication/: DiskBackup.Communication.csproj  EMailOperations.cs  IEmailOperations.cs
DiskBackup.ConsoleApplication/: App.config  Data.cs  DiskBackup.ConsoleApplication.csproj  Program.cs  packages.config
DiskBackup.Controllers/: DiskBackup.Controllers.csproj
DiskBackup.Core/: DiskBackup.Core.csproj
DiskBackup.DataAccess/: App.config  DiskBackup.DataAccess.csproj  image_disk.db  packages.config
DiskBackup.DataAccess.Tests/: App.config  DiskBackup.DataAccess.Tests.csproj  UnitTest1.cs  image_disk.db  packages.config
DiskBackup.DriverInitializer/: DiskBackup.DriverInitializer.csproj  Program.cs
DiskBackup.Entities/: DiskBackup.Entities.csproj
DiskBackupGUI/: App.config  (+13 more)
minispy_user/: CMakeLists.txt  NARDPSCRPT  NAR_APP_LOG_FILE.txt  TODO  TempTestFile  backup.cpp  backup.h  bg.hpp  build.bat  clr_build.cpp  compression.h  file_explorer.cpp  file_explorer.h  file_explorer.hpp  liblz4_static.lib  libzstd.lib  libzstd_static.lib  main.cpp  main.lib  memory.h  minispy_user.vcxproj  minispy_user.vcxproj.Filters  minispy_user.vcxproj.filters  mspyLog.c  mspyLog.cpp  mspyLog.h  mspyUser.c  mspyUser.cpp  nar.cpp  nar.h  nar.hpp  nar_build_include.cpp  nar_compression.hpp  nar_win32.cpp  nar_win32.h  nar_win32.hpp  naroutput.txt  narstring.cpp  narstring.h  package.cpp  (+16 more)
minispy_user/include/: bg.hpp  file_explorer.hpp  memory.hpp  minispy.h  nar.hpp  nar_compression.hpp  nar_extension_searcher.hpp  nar_ntfs_utils.hpp  nar_win32.hpp  narstring.hpp  performance.hpp  platform_io.hpp  precompiled.h  stb_leakcheck.h
minispy_user/linux_restore/: Makefile  devls.txt  example_glfw_opengl3  gf2  imgui.ini  imgui_settings  lsresult.txt  lubuntu init  main.cpp  mspyLog.h  mspyUser.cpp  must_install.txt  nar_linux  test.cpp
minispy_user/src/: bg.cpp  file_explorer.cpp  nar.cpp  nar_compression.cpp  nar_extension_searcher.cpp  nar_win32.cpp  nar_win32_ntfs_parser.cpp  platform_io.cpp  process_listener.cpp  standalone_vss.cpp  webserver_poc.cpp
(+408 files in other folders)
